[gd_scene load_steps=3 format=2]

[ext_resource path="res://styles/editor_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/editor.gd" type="Script" id=2]

[node name="editor" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxLanguage" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 44.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxLanguage"]
margin_top = 3.0
margin_right = 136.0
margin_bottom = 41.0
text = "Language"

[node name="Language" type="OptionButton" parent="Panel/VBoxContainer/HBoxLanguage"]
margin_left = 140.0
margin_right = 181.0
margin_bottom = 44.0

[node name="HBoxCategory" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 48.0
margin_right = 1280.0
margin_bottom = 92.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxCategory"]
margin_top = 3.0
margin_right = 125.0
margin_bottom = 41.0
text = "Category"

[node name="Category" type="OptionButton" parent="Panel/VBoxContainer/HBoxCategory"]
margin_left = 129.0
margin_right = 170.0
margin_bottom = 44.0

[node name="QuizInfoLabel" type="Label" parent="Panel/VBoxContainer"]
margin_top = 96.0
margin_right = 1280.0
margin_bottom = 134.0
text = "Quiz info"

[node name="QuizTextEdit" type="TextEdit" parent="Panel/VBoxContainer"]
margin_top = 138.0
margin_right = 1280.0
margin_bottom = 648.0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Donec consequat ligula fringilla eleifend hendrerit. Nunc sem justo, finibus sit amet blandit vel, pharetra id nibh. Suspendisse potenti."
caret_blink = true

[node name="HBoxAnswers" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 652.0
margin_right = 1280.0
margin_bottom = 752.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/HBoxAnswers"]
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3
columns = 4

[node name="HBoxContainer1" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer1"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer1"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 321.0
margin_right = 638.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 642.0
margin_right = 959.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer3"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 963.0
margin_right = 1280.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer4"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer4"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_top = 52.0
margin_right = 317.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer5"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer5"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 321.0
margin_top = 52.0
margin_right = 638.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer6"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer6"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 642.0
margin_top = 52.0
margin_right = 959.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer7"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer7"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxContainer8" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer"]
margin_left = 963.0
margin_top = 52.0
margin_right = 1280.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="CheckBoxAnswer" type="CheckBox" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer8"]
margin_right = 24.0
margin_bottom = 48.0

[node name="EditAnswer" type="LineEdit" parent="Panel/VBoxContainer/HBoxAnswers/GridContainer/HBoxContainer8"]
margin_left = 28.0
margin_right = 317.0
margin_bottom = 48.0
size_flags_horizontal = 3

[node name="HBoxControls" type="HBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 756.0
margin_right = 1280.0
margin_bottom = 800.0

[node name="ButtonPrev" type="Button" parent="Panel/VBoxContainer/HBoxControls"]
margin_right = 99.0
margin_bottom = 44.0
text = "< Prev"

[node name="ButtonNext" type="Button" parent="Panel/VBoxContainer/HBoxControls"]
margin_left = 103.0
margin_right = 206.0
margin_bottom = 44.0
text = "Next >"

[node name="ButtonSave" type="Button" parent="Panel/VBoxContainer/HBoxControls"]
margin_left = 210.0
margin_right = 290.0
margin_bottom = 44.0
text = "Save"

[node name="ButtonAdd" type="Button" parent="Panel/VBoxContainer/HBoxControls"]
margin_left = 294.0
margin_right = 361.0
margin_bottom = 44.0
text = "Add"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxControls"]
margin_left = 365.0
margin_right = 1280.0
margin_bottom = 44.0
size_flags_horizontal = 3
alignment = 2

[node name="ButtonBack" type="Button" parent="Panel/VBoxContainer/HBoxControls/HBoxContainer"]
margin_left = 633.0
margin_right = 915.0
margin_bottom = 44.0
text = "Back to Main Menu"
[connection signal="item_selected" from="Panel/VBoxContainer/HBoxLanguage/Language" to="." method="_on_Language_item_selected"]
[connection signal="item_selected" from="Panel/VBoxContainer/HBoxCategory/Category" to="." method="_on_Category_item_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxControls/ButtonPrev" to="." method="_on_ButtonPrev_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxControls/ButtonNext" to="." method="_on_ButtonNext_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxControls/ButtonSave" to="." method="_on_ButtonSave_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxControls/ButtonAdd" to="." method="_on_ButtonAdd_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxControls/HBoxContainer/ButtonBack" to="." method="_on_Button_pressed"]
